fixed z-index

--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,10 @@ header {
   z-index: 1000;
 }
 
+.modal {
+  z-index: 1002;
+}
+
 header nav ul li {
   display: flex;
   padding: 10px;
